# SecOpt

./: .gitignore  Configure.sh  README.md  backdoor.py  experiment.sh  extended_appendix.tex  fedavg.py  main.bib  main.py  makefile  pyproject.toml  requirements.txt  result_tables.py  robust_client.py  supplementary_material.md
fl/: __init__.py  backdoor.py  client.py  data.py  distributions.py  hardening.py  server.py
fl/attacks/: __init__.py  alternating_minimization.py  backdoor.py  label_flipper.py  scaler.py  smp.py
inversion/: ablation.py  ablation.sh  ablation_analysis.py  attack.py  attack.sh  common.py  experiment.sh  gen_gradcams.sh  gen_images.sh  gradcams_plot.py  load_datasets.py  main.py  models.py  optimisers.py  plot.py  requirements.txt  statistics.py  train.py  train.sh
inversion/classifier_metric/: __init__.py  cnn.py  datalib.py  densenet.py  learn.py  resnetv2.py  standardization.py
inversion/fl/: __init__.py  client.py  data.py  server.py
inversion/gradcam/: __init__.py
inversion/models/: __init__.py  densenet.py  inception_v3.py  mobilenet_v2.py  resnetrs.py
mitigation/: experiment.sh  main.py  models.py  requirements.txt  result_tables.py
mitigation/fl/: backdoor.py  client.py  data.py  distributions.py  hardening.py  server.py
mitigation/models/: __init__.py
new experiments/: attack.py  common.py  load_datasets.py  models.py  optimisers.py  requirements.txt  train.py  train.sh
performance/: experiment.sh  main.py  models.py  optimisers.py  requirements.txt  result_tables.py  statistics.py  train.sh  utils.py
performance/fl/: __init__.py  data.py  hardening.py
performance/fl/fedavg/: client.py  (+1 more)
performance/models/: densenet.py  mobilenet_v2.py
secagg/: main.py
secagg/fl/: data.py
src/: ablation.py  attack.py  common.py  models.py  optimisers.py  performance.py  precode.py  statistics.py  train_inversion.py
src/scripts/: ablate_attack.sh  attack.sh  performance.sh  precode.sh  process_attack_ablate.py  train_inversion_models.sh
(+8 files in other folders)
