[tool.poetry]
name = "nerv"
version = "0.1.0"
description = ""
authors = ["Cody Lewis <hello@codymlewis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chex = "0.1.84"
datasets = "2.14.6"
einops = "0.7.0"
flax = "0.7.4"
h5py = "3.10.0"
jax = "0.4.19"
jaxopt = "0.8.1"
matplotlib = "3.8.0"
numpy = "1.26.1"
optax = "0.1.7"
orbax = "0.1.9"
pandas = "2.1.1"
Pillow = "10.0.1"
scikit-image = "0.22.0"
scikit-learn = "1.3.2"
scipy = "^1.11.3"
pyarrow = "14.0.0"
pyqt6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2.0.4"
jedi = ">=0.19.1"
flake8 = ">=6.1.0"
python-lsp-server = ">=1.8.0"
yapf = ">=0.40.1"

[tool.poetry.group.nvidia]
optional = true

[tool.poetry.group.nvidia.dependencies]
jaxlib = { extras = ["cuda12_pip"], version = "0.4.19" }


[[tool.poetry.source]]
name = "jax[cuda12_pip]"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
