[tool.poetry]
name = "secadam"
version = "0.1.0"
description = ""
authors = ["Cody Lewis <hello@codymlewis.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chex = "0.1.86"
datasets = "2.18.0"
einops = "0.7.0"
flax = "0.8.2"
h5py = "3.10.0"
jax = "0.4.26"
jaxopt = "0.8.3"
matplotlib = "3.8.0"
numpy = "1.26.1"
optax = "0.2.2"
pandas = "2.1.1"
Pillow = "10.3.0"
scikit-image = "0.22.0"
scikit-learn = "1.4.2"
scipy = "1.11.3"
pyqt6 = "6.6.0"
jinja2 = "3.1.2"
safeflax = { git = "git@github.com:codymlewis/safeflax.git" }

[tool.poetry.group.dev.dependencies]
autopep8 = ">=2.0.4"
jedi = ">=0.19.1"
flake8 = ">=6.1.0"
python-lsp-server = ">=1.8.0"
yapf = ">=0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
